fix issues on mobile devices

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -3,10 +3,16 @@
 html {
   font-family: Montserrat, sans-serif;
   color: $color-text;
+  height: 100%;
 }
 
 body {
   line-height: 1.5;
+  height: 100%;
+}
+
+#__nuxt, #__layout {
+  height: 100%;
 }
 
 a {
